# Python-xApps

./: README.md  README.rst  docker-compose.yml  pyproject.toml  xapp_decision.py
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
auto_mato/: __init__.py  common.py  decision.py  decision_xapp.py  model_handler.py  monitor_xapp.py  prediction.py  prediction_trainer.py  prediction_xapp.py  route.rt  xapp_prediction.py
data/: cc0_sc_dl.csv  dataset1.csv  input.csv
docker/: Dockerfile-decision  Dockerfile-miniserve  Dockerfile-monitor  Dockerfile-prediction
tests/: test_auto_mato.py
