[tool.poetry]
name = "auto-mato"
version = "0.1.0"
description = ""
authors = ["Doruk Tayli <doruktayli@gmail.com>",
           "Mehmet Karaca <krcmehmeta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"
keras = "^2.4.3"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
isort = "^5.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
