[tool.poetry]
name = "auto-mato"
version = "0.1.0"
description = ""
authors = ["Doruk Tayli <doruktayli@gmail.com>",
           "Mehmet Karaca <krcmehmeta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
ricxappframe = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
isort = "^5.9.2"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
