[tool.poetry]
name = "auto-mato"
version = "0.1.0"
description = ""
authors = ["Doruk Tayli <doruktayli@gmail.com>",
           "Mehmet Karaca <krcmehmeta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
ricxappframe = "^2.2.0"
scikit-learn = "^0.24.2"
numpy = "^1.21.1"
gekko = "1.0.1"



[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
isort = "^5.9.2"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
